test/field/set_on_function.lox
fn foo() {}

foo.bar = "value" // error: only instances have fields
